{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 140,
  "lineage": "96ee7e56-e5c5-ee4e-c88a-3fb1a7f195b2",
  "resources": [
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "cab432_memcached_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:901444280953:security-group/sg-07707a36aa1599475",
            "description": "Allow access to memcached from CAB432SG",
            "filter": null,
            "id": "sg-07707a36aa1599475",
            "name": "CAB432MemcachedSG",
            "region": "ap-southeast-2",
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-007bab53289655834"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "cab432_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:901444280953:security-group/sg-032bd1ff8cf77dbb9",
            "description": "Security Group - Default Port for CAB432 EC2 Users",
            "filter": null,
            "id": "sg-032bd1ff8cf77dbb9",
            "name": "CAB432SG",
            "region": "ap-southeast-2",
            "tags": {
              "Name": "Security Group for CAB432",
              "qut-username": "n12142522@qut.edu.au"
            },
            "timeouts": null,
            "vpc_id": "vpc-007bab53289655834"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "existing",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:901444280953:vpc/vpc-007bab53289655834",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-034452122c8319075",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-0dcd81db9bf347653",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-007bab53289655834",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-04c3d59af838a3821",
            "owner_id": "901444280953",
            "region": "ap-southeast-2",
            "tags": {
              "Name": "aws-controltower-VPC",
              "qut-username": "10701028"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:901444280953:loadbalancer/app/n11817143-app-alb/a2b0061d0cefe76b",
            "arn_suffix": "app/n11817143-app-alb/a2b0061d0cefe76b",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "n11817143-app-alb-1811658624.ap-southeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:901444280953:loadbalancer/app/n11817143-app-alb/a2b0061d0cefe76b",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "n11817143-app-alb",
            "preserve_host_header": false,
            "region": "ap-southeast-2",
            "security_groups": [
              "sg-032bd1ff8cf77dbb9"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04cc288ea3b2e1e53"
              },
              {
                "subnet_id": "subnet-05d0352bb15852524"
              },
              {
                "subnet_id": "subnet-075811427d5564cf9"
              }
            ],
            "subnets": [
              "subnet-04cc288ea3b2e1e53",
              "subnet-05d0352bb15852524",
              "subnet-075811427d5564cf9"
            ],
            "tags": {
              "Environment": "prod",
              "Name": "n11817143-app-alb",
              "Project": "n11817143-app"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "n11817143-app-alb",
              "Project": "n11817143-app",
              "Student": "n11817143",
              "qut-username": "n11817143@qut.edu.au"
            },
            "vpc_id": "vpc-007bab53289655834",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1GM3OXH4ZPM65"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:901444280953:loadbalancer/app/n11817143-app-alb/a2b0061d0cefe76b"
          },
          "dependencies": [
            "data.aws_security_group.cab432_sg"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:901444280953:listener/app/n11817143-app-alb/a2b0061d0cefe76b/b4a7024478028052",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [
                  {
                    "stickiness": [
                      {
                        "duration": 0,
                        "enabled": false
                      }
                    ],
                    "target_group": [
                      {
                        "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:901444280953:targetgroup/n11817143-app-video-api-tg/881c45a046094ed7",
                        "weight": 100
                      }
                    ]
                  }
                ],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:901444280953:listener/app/n11817143-app-alb/a2b0061d0cefe76b/b4a7024478028052",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:901444280953:loadbalancer/app/n11817143-app-alb/a2b0061d0cefe76b",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "ap-southeast-2",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {
              "ManagedBy": "Terraform",
              "Project": "CAB432-VideoApp",
              "Student": "n11817143",
              "qut-username": "n11817143@qut.edu.au"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:901444280953:listener/app/n11817143-app-alb/a2b0061d0cefe76b/b4a7024478028052"
          },
          "dependencies": [
            "data.aws_security_group.cab432_sg",
            "module.alb.aws_lb.main",
            "module.alb.aws_lb_target_group.video_api"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "admin_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:901444280953:targetgroup/n11817143-app-admin-service-tg/a0b0b41ab33e9057",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:901444280953:listener-rule/app/n11817143-app-alb/a2b0061d0cefe76b/b4a7024478028052/e4b8f2d79f589c20",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/admin/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:901444280953:listener-rule/app/n11817143-app-alb/a2b0061d0cefe76b/b4a7024478028052/e4b8f2d79f589c20",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:901444280953:listener/app/n11817143-app-alb/a2b0061d0cefe76b/b4a7024478028052",
            "priority": 200,
            "region": "ap-southeast-2",
            "tags": null,
            "tags_all": {
              "ManagedBy": "Terraform",
              "Project": "CAB432-VideoApp",
              "Student": "n11817143",
              "qut-username": "n11817143@qut.edu.au"
            }
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:901444280953:listener-rule/app/n11817143-app-alb/a2b0061d0cefe76b/b4a7024478028052/e4b8f2d79f589c20"
          },
          "dependencies": [
            "data.aws_security_group.cab432_sg",
            "module.alb.aws_lb.main",
            "module.alb.aws_lb_listener.http",
            "module.alb.aws_lb_listener.https",
            "module.alb.aws_lb_target_group.admin_service",
            "module.alb.aws_lb_target_group.video_api"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "video_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:901444280953:targetgroup/n11817143-app-video-api-tg/881c45a046094ed7",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:901444280953:listener-rule/app/n11817143-app-alb/a2b0061d0cefe76b/b4a7024478028052/c6f674d168271add",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/auth/*",
                      "/api/cache/*",
                      "/api/videos/*",
                      "/healthz"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:901444280953:listener-rule/app/n11817143-app-alb/a2b0061d0cefe76b/b4a7024478028052/c6f674d168271add",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:901444280953:listener/app/n11817143-app-alb/a2b0061d0cefe76b/b4a7024478028052",
            "priority": 100,
            "region": "ap-southeast-2",
            "tags": null,
            "tags_all": {
              "ManagedBy": "Terraform",
              "Project": "CAB432-VideoApp",
              "Student": "n11817143",
              "qut-username": "n11817143@qut.edu.au"
            }
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:901444280953:listener-rule/app/n11817143-app-alb/a2b0061d0cefe76b/b4a7024478028052/c6f674d168271add"
          },
          "dependencies": [
            "data.aws_security_group.cab432_sg",
            "module.alb.aws_lb.main",
            "module.alb.aws_lb_listener.http",
            "module.alb.aws_lb_listener.https",
            "module.alb.aws_lb_target_group.video_api"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "admin_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:901444280953:targetgroup/n11817143-app-admin-service-tg/a0b0b41ab33e9057",
            "arn_suffix": "targetgroup/n11817143-app-admin-service-tg/a0b0b41ab33e9057",
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/healthz",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:901444280953:targetgroup/n11817143-app-admin-service-tg/a0b0b41ab33e9057",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-southeast-2:901444280953:loadbalancer/app/n11817143-app-alb/a2b0061d0cefe76b"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "n11817143-app-admin-service-tg",
            "port": 8081,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ap-southeast-2",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "prod",
              "Name": "n11817143-app-admin-service-tg",
              "Project": "n11817143-app"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "n11817143-app-admin-service-tg",
              "Project": "n11817143-app",
              "Student": "n11817143",
              "qut-username": "n11817143@qut.edu.au"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-007bab53289655834"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:901444280953:targetgroup/n11817143-app-admin-service-tg/a0b0b41ab33e9057"
          }
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "video_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:901444280953:targetgroup/n11817143-app-video-api-tg/881c45a046094ed7",
            "arn_suffix": "targetgroup/n11817143-app-video-api-tg/881c45a046094ed7",
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/healthz",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:901444280953:targetgroup/n11817143-app-video-api-tg/881c45a046094ed7",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-southeast-2:901444280953:loadbalancer/app/n11817143-app-alb/a2b0061d0cefe76b"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "n11817143-app-video-api-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ap-southeast-2",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "prod",
              "Name": "n11817143-app-video-api-tg",
              "Project": "n11817143-app"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "n11817143-app-video-api-tg",
              "Project": "n11817143-app",
              "Student": "n11817143",
              "qut-username": "n11817143@qut.edu.au"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-007bab53289655834"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:901444280953:targetgroup/n11817143-app-video-api-tg/881c45a046094ed7"
          }
        }
      ]
    }
  ]
}